--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
 </head>
   <body class="bg-brand-beige text-brand-charcoal">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
